update description depencies and doc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,5 @@ export(getTFs)
 export(get_genome_annotations)
 export(get_tf2motifs)
 export(load_mat)
-export(peaksInRegEl)
-exportClasses(MotifsDatabase)
-exportClasses(Network)
+export(peaks_in_regulatory_elements)
+exportClasses(motifs_db)
