--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,37 @@
-Package: RHummus
-Title: What the Package Does (One Line, Title Case)
+Package: HuMMuS
+Title: Heterogeneous Multilayer Network for Multi-Omics Single-Cell Data
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
+    person("Rémi", "Trimbour", , "remi.trimbour@pasteur.fr", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+Description: A general framework to infer regulatory mechanisms from multi-omics single-cell data. 
+    HuMMuS package provides functions to build individual networks
+    from different single-cell modalities, then to integrate them 
+    into a single-cell heterogeneous multilayer network. The package
+    also provides functions to infer regulatory mechanisms from the
+    heterogeneous multilayer network.
+    HuMMuS is based on a flexible framework that can be adapted to any 
+    single-cell modalities. We provide study cases for scRNA+scATAC
+    and scRNA+scATAC+snmC(methylation) that can be completed by PPI.
+    Many regulatory mechanisms can be inferred with HuMMuS, notably
+    classical gene regulatory networks (GRN), but TF-target genes, 
+    enhancer-gene interactions, TF-enhancer bindings, or even research 
+    of heterogeneous communnities of omics features (e.g. ensemble of
+    peaks, genes and TFs cooperating to the same biological function).
+License: use_agpl3_license()
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.3
+Imports:
+    stringr,
+    JASPAR2020,
+    chromVAR,
+    IRanges,
+    Matrix,
+    S4Vectors,
+    utils,
+    tidyr,
+    OmnipathR,
+    GENIE3,
+    reshape2
