--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,13 +2,18 @@
 
 export(Bipartite_Peaks2Genes)
 export(Bipartite_TFs2Peaks)
+export(aggregate_matrix)
 export(compute_TF_network)
 export(compute_atac_peak_network)
 export(compute_gene_network)
 export(find_peaks_near_genes)
-export(getTFs)
 export(get_genome_annotations)
 export(get_tf2motifs)
+export(get_tfs)
 export(load_mat)
 export(peaks_in_regulatory_elements)
+export(preprocess_cds)
+export(reduce_dimension)
+exportClasses(hummus_object)
 exportClasses(motifs_db)
+import(sparseMatrixStats)
