store_network more general add_networks can now accept any hummus to multiplex object

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,14 +3,13 @@
 export(aggregate_matrix)
 export(bipartite_peaks2genes)
 export(bipartite_tfs2peaks)
-export(compute_TF_network)
 export(compute_atac_peak_network)
 export(compute_gene_network)
+export(compute_tf_network)
 export(find_peaks_near_genes)
 export(get_genome_annotations)
 export(get_tf2motifs)
 export(get_tfs)
-export(load_mat)
 export(peaks_in_regulatory_elements)
 export(preprocess_cds)
 export(reduce_dimension)
