--- a/a/config.yaml
+++ b/a/config.yaml
@@ -3,7 +3,7 @@ bipartite:
     graph_type: '00'
     source: RNA
     target: peaks
-  bipartite/tf_peaks:
+  bipartite/tf_peak:
     graph_type: '00'
     source: peaks
     target: TF_network
@@ -36,28 +36,28 @@ multiplex:
     - multiplex/TF/o
     - multiplex/TF/r
     - multiplex/TF/k
-  peak_network:
-    graph_type: '00'
+  peaks:
+    graph_type: '10'
     layers:
-    - multiplex/peak_network/p
-    - multiplex/peak_network/e
-    - multiplex/peak_network/a
-    - multiplex/peak_network/k
-    - multiplex/peak_network/_
-    - multiplex/peak_network/n
-    - multiplex/peak_network/e
-    - multiplex/peak_network/t
-    - multiplex/peak_network/w
-    - multiplex/peak_network/o
-    - multiplex/peak_network/r
-    - multiplex/peak_network/k
-    - multiplex/peak_network/_
-    - multiplex/peak_network/G
-    - multiplex/peak_network/E
-    - multiplex/peak_network/N
-    - multiplex/peak_network/I
-    - multiplex/peak_network/E
-    - multiplex/peak_network/3
+    - multiplex/peaks/p
+    - multiplex/peaks/e
+    - multiplex/peaks/a
+    - multiplex/peaks/k
+    - multiplex/peaks/_
+    - multiplex/peaks/n
+    - multiplex/peaks/e
+    - multiplex/peaks/t
+    - multiplex/peaks/w
+    - multiplex/peaks/o
+    - multiplex/peaks/r
+    - multiplex/peaks/k
+    - multiplex/peaks/_
+    - multiplex/peaks/c
+    - multiplex/peaks/i
+    - multiplex/peaks/c
+    - multiplex/peaks/e
+    - multiplex/peaks/r
+    - multiplex/peaks/o
 r: 0.7
 seed: seeds/seeds.txt
 self_loops: 0
