add define_output function t doc and namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,12 +7,18 @@ export(bipartite_tfs2peaks)
 export(compute_atac_peak_network)
 export(compute_gene_network)
 export(compute_tf_network)
+export(define_binding_regions)
+export(define_enhancers)
+export(define_grn)
+export(define_output)
+export(define_target_genes)
 export(find_peaks_near_genes)
 export(format_bipartites_names)
 export(format_multiplex_names)
 export(get_genome_annotations)
 export(get_tf2motifs)
 export(get_tfs)
+export(hummus_object)
 export(peaks_in_regulatory_elements)
 export(preprocess_cds)
 export(reduce_dimension)
