add vignette folder

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -49,4 +49,7 @@ Suggests:
     doParallel,
     doRNG,
     EnsDb.Hsapiens.v86,
-    BSgenome.Hsapiens.UCSC.hg38
+    BSgenome.Hsapiens.UCSC.hg38,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
