--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -1,6 +1,5 @@
 # Workflow derived from https://github.com/r-lib/actions/tree/v2/examples
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
-# , local::.
 on:
   push:
     branches: [main, master]
@@ -46,4 +45,4 @@ jobs:
         with:
           clean: false
           branch: gh-pages
-          folder: root
+          folder: docs
