--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -32,7 +32,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::pkgdown, local::., any::devtools
+          extra-packages: any::pkgdown, local::., any::devtools, any::Rtools
           needs: website
           
       - name: Setup hummuspy env
