corrected homepage link and remove twitter link

--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -3,7 +3,7 @@ url: https://cantinilab.github.io/HuMMuS
 navbar:
   structure:
     left: [home, reference, articles]
-    right: [github, twitter, homepage]
+    right: [github, homepage]
   components:
      homepage:
        icon: "fas fa-university"
