--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(compute_gene_network)
 export(compute_tf_network)
 export(define_binding_regions)
 export(define_enhancers)
+export(define_general_config)
 export(define_grn)
 export(define_output)
 export(define_target_genes)
