update methods Hummus_Object

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,12 @@
 S3method("[[",Hummus_Object)
 S3method(DefaultAssay,Hummus_Object)
 S3method(VariableFeatures,Hummus_Object)
+export("DefaultAssay<-")
+export("VariableFeatures<-")
+export(DefaultAssay)
 export(Hummus_Object)
 export(Initiate_Hummus_Object)
+export(VariableFeatures)
 export(add_network)
 export(aggregate_matrix)
 export(bipartite_peaks2genes)
