--- a/hummuspy/pyproject.toml
+++ b/hummuspy/pyproject.toml
@@ -9,15 +9,17 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = ">=3.8"
 multixrank = "^0.1"
-joblib = "^1.2.0"
+joblib = "^1.3.0"
 tqdm = "^4.65.0"
 numpy = "^1.24.2"
 pandas = "^2.0.0"
 pyyaml = "^6.0"
 matplotlib = "^3.4.3"
 scipy = "^1.8.0"
-distributed = "^2024.0.0"
+distributed = "^2023.0.0"
+dask = "^2023.0.0"
 rich = "^10.12.0"
+bokeh = ">=2.4.2,!=3.0.*"
 
 [build-system]
 requires = ["poetry-core"]
