--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -27,7 +27,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::pkgdown, local::., any::devtools
+          extra-packages: any::pkgdown, any::reticulate, any::devtools
           needs: website
 
       - uses: actions/setup-python@v2
