--- a/hummuspy/pyproject.toml
+++ b/hummuspy/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.8"
-multixrank = "^0.1"
+multixrank = "0.1"
 joblib = "^1.3.0"
 tqdm = ">=4.65.0"
 numpy = "^1.24.2"
