--- a/hummuspy/pyproject.toml
+++ b/hummuspy/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "hummuspy"
-version = "0.1.7"
+version = "0.1.7.post1"
 description = "HuMMuS is a novel method for the inference of regulatory mechanisms from multi-omics data with any type and number of omics, through a heterogeneous multilayer network framework."
 authors = ["Rémi Trimbour <remi.trimbour@pasteur.fr>"]
 license = "GPL-3.0-only"
