loosened dependencies restrictions

--- a/hummuspy/pyproject.toml
+++ b/hummuspy/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "hummuspy"
-version = "0.1.7.post1"
+version = "0.1.7.post2"
 description = "HuMMuS is a novel method for the inference of regulatory mechanisms from multi-omics data with any type and number of omics, through a heterogeneous multilayer network framework."
 authors = ["Rémi Trimbour <remi.trimbour@pasteur.fr>"]
 license = "GPL-3.0-only"
@@ -8,10 +8,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.8"
-multixrank = "0.1"
+multixrank = ">=0.1, <0.4"
 joblib = "^1.3.0"
-tqdm = ">=4.65.0"
-numpy = "^1.24.2"
+tqdm = ">=4.66.3"
+numpy = ">1.24.2, <2.0.0"
 pandas = "^2.0.0"
 pyyaml = "^6.0"
 matplotlib = "^3.4.3"
