Fix working directory for Poetry build step

--- a/.github/workflows/publish_hummuspy.yaml
+++ b/.github/workflows/publish_hummuspy.yaml
@@ -22,7 +22,7 @@ jobs:
         run: pip install poetry
 
       - name: Build package
-        working-directory: HuMMuS/hummuspy
+        working-directory: ./hummuspy
         run: poetry build
 
       - name: Publish to PyPI
