--- a/container/environment_bkp.yml
+++ b/container/environment_bkp.yml
@@ -8,19 +8,9 @@ dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
   - _r-mutex=1.0.0=anacondar_1
-  - aioeasywebdav=2.4.0=pyha770c72_0
-  - aiohappyeyeballs=2.6.1=pyhd8ed1ab_0
-  - aiohttp=3.13.3=py310h31b6992_0
-  - aiosignal=1.4.0=pyhd8ed1ab_0
-  - amply=0.1.6=pyhd8ed1ab_1
-  - annotated-types=0.7.0=pyhd8ed1ab_1
-  - appdirs=1.4.4=pyhd8ed1ab_1
   - argcomplete=3.6.3=pyhd8ed1ab_0
-  - argparse-dataclass=2.0.0=pyhd8ed1ab_1
-  - async-timeout=5.0.1=pyhcf101f3_2
   - attrs=25.4.0=pyhcf101f3_1
   - backports.zstd=1.3.0=py310h69bd2ac_0
-  - bcrypt=5.0.0=py310hd8f68c5_1
   - binutils_impl_linux-64=2.45=default_hfdba357_105
   - bioconductor-annotate=1.84.0=r44hdfd78af_0
   - bioconductor-annotationdbi=1.68.0=r44hdfd78af_0
@@ -80,8 +70,6 @@ dependencies:
   - bioconductor-xvector=0.46.0=r44h15a9599_2
   - bioconductor-zlibbioc=1.52.0=r44h3df3fcb_2
   - blosc=1.21.6=he440d0b_1
-  - boto3=1.42.41=pyhd8ed1ab_0
-  - botocore=1.42.41=pyhd8ed1ab_0
   - brotli-python=1.2.0=py310hba01987_1
   - bwidget=1.10.1=ha770c72_1
   - bzip2=1.0.8=hda65f42_8
@@ -91,30 +79,9 @@ dependencies:
   - cached_property=1.5.2=pyha770c72_1
   - cairo=1.18.4=h3394656_0
   - certifi=2026.1.4=pyhd8ed1ab_0
-  - cffi=2.0.0=py310he7384ee_1
   - charset-normalizer=3.4.4=pyhd8ed1ab_0
-  - click=8.3.1=pyh8f84b5b_1
-  - coin-or-cbc=2.10.12=h4d16d09_5
-  - coin-or-cgl=0.60.9=hc46dffc_7
-  - coin-or-clp=1.17.10=hc03379b_4
-  - coin-or-osi=0.108.11=hf4fecb4_8
-  - coin-or-utils=2.11.12=hc93afbd_7
-  - coincbc=2.10.12=5_metapackage
-  - colorama=0.4.6=pyhd8ed1ab_1
-  - coloredlogs=15.0.1=pyhd8ed1ab_4
-  - configargparse=1.7.1=pyhe01879c_0
-  - connection_pool=0.0.3=pyhd3deb0d_0
-  - cryptography=46.0.4=py310hb288b08_0
   - curl=8.18.0=h4e3cde8_0
-  - datrie=0.8.3=py310h7c4b9e2_0
-  - defusedxml=0.7.1=pyhd8ed1ab_0
   - docrep=0.3.2=pyh44b312d_0
-  - docutils=0.22.4=pyhd8ed1ab_0
-  - dpath=2.2.0=pyha770c72_1
-  - dropbox=12.0.2=pyhd8ed1ab_1
-  - eido=0.2.5=pyhd8ed1ab_0
-  - exceptiongroup=1.3.1=pyhd8ed1ab_0
-  - filechunkio=1.8=py_2
   - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
   - font-ttf-inconsolata=3.000=h77eed37_0
   - font-ttf-source-code-pro=2.038=h77eed37_0
@@ -125,25 +92,12 @@ dependencies:
   - freetype=2.14.1=ha770c72_0
   - freexl=2.0.0=h9dce30a_2
   - fribidi=1.0.16=hb03c661_0
-  - frozenlist=1.7.0=py310h9548a50_0
-  - ftputil=5.1.0=pyhd8ed1ab_0
   - gcc_impl_linux-64=15.2.0=hc5723f1_16
   - geos=3.14.1=h480dda7_0
   - gfortran_impl_linux-64=15.2.0=h281d09f_16
   - giflib=5.2.2=hd590300_0
-  - gitdb=4.0.12=pyhd8ed1ab_0
-  - gitpython=3.1.46=pyhd8ed1ab_0
   - glpk=5.0=h445213a_0
   - gmp=6.3.0=hac33072_2
-  - google-api-core=2.29.0=pyhd8ed1ab_0
-  - google-api-python-client=2.189.0=pyh332efcf_0
-  - google-auth=2.48.0=pyhcf101f3_0
-  - google-auth-httplib2=0.3.0=pyhd8ed1ab_0
-  - google-cloud-core=2.5.0=py310h06a4308_0
-  - google-cloud-storage=3.9.0=pyhcf101f3_0
-  - google-crc32c=1.8.0=py310hf432777_1
-  - google-resumable-media=2.8.0=pyhd8ed1ab_0
-  - googleapis-common-protos=1.72.0=pyhd8ed1ab_0
   - graphite2=1.3.14=hecca717_2
   - gsl=2.7=he838d99_0
   - gxx_impl_linux-64=15.2.0=hda75c37_16
@@ -152,21 +106,12 @@ dependencies:
   - harfbuzz=12.2.0=h15599e2_0
   - hdf5=1.14.6=nompi_h1b119a7_105
   - hpack=4.1.0=pyhd8ed1ab_0
-  - httplib2=0.31.2=pyhd8ed1ab_0
-  - humanfriendly=10.0=pyh707e725_8
   - hyperframe=6.1.0=pyhd8ed1ab_0
   - icu=75.1=he02047a_0
   - idna=3.11=pyhd8ed1ab_0
   - inflect=7.5.0=pyhd8ed1ab_0
-  - iniconfig=2.3.0=pyhd8ed1ab_0
-  - invoke=2.2.1=pyhd8ed1ab_0
-  - jinja2=3.1.6=pyhcf101f3_1
-  - jmespath=1.1.0=pyhcf101f3_1
   - jq=1.5=0
   - json-c=0.18=h6688a6e_0
-  - jsonschema=4.26.0=pyhcf101f3_0
-  - jsonschema-specifications=2025.9.1=pyhcf101f3_0
-  - jupyter_core=5.9.1=pyhc90fa1f_0
   - kernel-headers_linux-64=6.12.0=he073ed8_5
   - keyutils=1.6.3=hb9d3cd8_0
   - krb5=1.21.3=h659f571_0
@@ -180,7 +125,6 @@ dependencies:
   - libbrotlidec=1.2.0=hb03c661_1
   - libbrotlienc=1.2.0=hb03c661_1
   - libcblas=3.11.0=5_h0358290_openblas
-  - libcrc32c=1.1.2=h9c3ff4c_0
   - libcurl=8.18.0=h4e3cde8_0
   - libdeflate=1.25=h17f619e_0
   - libedit=3.1.20250104=pl5321h7949ede_0
@@ -206,7 +150,6 @@ dependencies:
   - libjxl=0.11.1=ha09017c_8
   - libkml=1.3.0=haa4a5bd_1022
   - liblapack=3.11.0=5_h47877c9_openblas
-  - liblapacke=3.11.0=5_h6ae95b6_openblas
   - liblzma=5.8.2=hb03c661_0
   - libnghttp2=1.67.0=had1ee68_0
   - libnsl=2.0.1=hb9d3cd8_1
@@ -214,7 +157,6 @@ dependencies:
   - libpng=1.6.54=h421ea60_0
   - librttopo=1.1.0=h46dd2a8_20
   - libsanitizer=15.2.0=h90f66d4_16
-  - libsodium=1.0.20=h4ab18f5_0
   - libspatialite=5.1.0=gpl_h2abfd87_119
   - libsqlite=3.51.2=h0c1763c_0
   - libssh2=1.11.1=hcf80075_0
@@ -232,65 +174,32 @@ dependencies:
   - libxml2-16=2.15.1=ha9997c6_0
   - libxml2-devel=2.15.1=h26afc86_0
   - libzlib=1.3.1=hb9d3cd8_2
-  - logmuse=0.2.8=pyhd8ed1ab_1
   - lz4-c=1.10.0=h5888daf_1
   - lzo=2.10=h280c20c_1002
   - make=4.4.1=hb9d3cd8_2
-  - markdown-it-py=4.0.0=pyhd8ed1ab_0
-  - markupsafe=3.0.3=py310h3406613_0
-  - mdurl=0.1.2=pyhd8ed1ab_1
   - minizip=4.0.10=h05a5f5f_0
   - more-itertools=10.8.0=pyhcf101f3_1
-  - multidict=6.7.0=py310h3406613_0
   - muparser=2.3.5=h5888daf_0
-  - nbformat=5.10.4=pyhd8ed1ab_1
   - ncurses=6.5=h2d0b736_3
   - nlopt=2.10.0=py310h699ddf3_3
   - numpy=1.26.4=py310hb13e2d6_0
-  - oauth2client=4.1.3=pyhd8ed1ab_1
   - omnipath=1.0.8=pyhd8ed1ab_0
   - openssl=3.6.1=h35e630c_1
   - packaging=26.0=pyhcf101f3_0
   - pandas=2.3.3=py310h0158d43_2
   - pandoc=3.8.3=ha770c72_0
   - pango=1.56.4=hadf4263_0
-  - paramiko=4.0.0=pyhd8ed1ab_0
   - pcre2=10.47=haa7fec5_0
-  - pephubclient=0.4.4=pyhd8ed1ab_1
-  - peppy=0.40.8=pyhd8ed1ab_0
   - pip=26.0=pyh8b19718_0
   - pixman=0.46.4=h54a6638_1
-  - platformdirs=4.5.1=pyhcf101f3_0
-  - pluggy=1.6.0=pyhf9edf01_1
-  - ply=3.11=pyhd8ed1ab_3
-  - prettytable=3.17.0=pyhd8ed1ab_0
   - proj=9.7.1=he0df7b0_2
-  - propcache=0.3.1=py310h89163eb_0
-  - proto-plus=1.27.1=pyhd8ed1ab_0
-  - protobuf=6.32.0=py310ha36e12e_0
-  - psutil=7.2.2=py310h139afa4_0
   - pthread-stubs=0.4=hb9d3cd8_1002
-  - pulp=2.7.0=py310hff52083_1
-  - pyasn1=0.6.2=pyhd8ed1ab_0
-  - pyasn1-modules=0.4.2=pyhd8ed1ab_0
-  - pycparser=2.22=pyh29332c3_1
-  - pydantic=2.12.5=pyhcf101f3_1
-  - pydantic-core=2.41.5=py310hd8f68c5_1
-  - pygments=2.19.2=pyhd8ed1ab_0
-  - pynacl=1.6.2=py310h7c4b9e2_0
-  - pyopenssl=25.3.0=pyhd8ed1ab_0
-  - pyparsing=3.3.2=pyhcf101f3_0
-  - pysftp=0.2.9=py_1
   - pysocks=1.7.1=pyha55dd90_7
-  - pytest=9.0.2=pyhcf101f3_0
   - python=3.10.19=h3c07f61_3_cpython
   - python-dateutil=2.9.0.post0=pyhe01879c_2
-  - python-fastjsonschema=2.21.2=pyhe01879c_0
-  - python-irodsclient=3.1.1=pyhff2d567_1
   - python-tzdata=2025.3=pyhd8ed1ab_0
   - python_abi=3.10=8_cp310
   - pytz=2025.2=pyhd8ed1ab_0
-  - pyu2f=0.1.5=pyhd8ed1ab_1
   - pyyaml=6.0.3=py310h3406613_0
   - r-abind=1.4_8=r44hc72bb7e_1
   - r-askpass=1.2.1=r44h54b55ab_1
@@ -561,54 +470,26 @@ dependencies:
   - r-zip=2.3.3=r44h54b55ab_1
   - r-zoo=1.8_15=r44h54b55ab_0
   - readline=8.3=h853b02a_0
-  - referencing=0.37.0=pyhcf101f3_0
   - requests=2.32.5=pyhcf101f3_1
-  - reretry=0.11.8=pyhd8ed1ab_1
-  - rich=14.3.2=pyhcf101f3_0
-  - rpds-py=0.30.0=py310hd8f68c5_0
-  - rsa=4.9.1=pyhd8ed1ab_0
-  - s3transfer=0.16.0=pyhd8ed1ab_0
   - sed=4.9=h6688a6e_0
   - setuptools=80.10.2=pyh332efcf_0
-  - setuptools-scm=9.2.2=pyhd8ed1ab_0
-  - shellingham=1.5.4=pyhd8ed1ab_2
   - six=1.17.0=pyhe01879c_1
-  - slacker=0.14.0=pyhd8ed1ab_1
-  - smart_open=7.5.0=pyhcf101f3_0
-  - smmap=5.0.2=pyhd8ed1ab_0
-  - snakemake=7.32.4=hdfd78af_1
-  - snakemake-minimal=7.32.4=pyhdfd78af_1
   - snappy=1.2.2=h03e3b7b_1
   - sqlite=3.51.2=hbc0de68_0
-  - stone=3.3.2=pyhd8ed1ab_0
-  - stopit=1.1.2=pyhd8ed1ab_1
   - sysroot_linux-64=2.39=hc4b9eeb_5
-  - tabulate=0.9.0=pyhcf101f3_3
   - tbb=2022.3.0=hb700be7_2
   - tbb-devel=2022.3.0=h51de99f_2
-  - throttler=1.2.2=pyhd8ed1ab_0
   - tk=8.6.13=noxft_h366c992_103
   - tktable=2.10=h8d826fa_7
   - toml=0.10.2=pyhcf101f3_3
-  - tomli=2.4.0=pyhcf101f3_0
   - tomlkit=0.14.0=pyha770c72_0
-  - toposort=1.10=pyhd8ed1ab_1
   - tqdm=4.67.2=pyh8f84b5b_2
-  - traitlets=5.14.3=pyhd8ed1ab_1
   - typeguard=4.4.4=pyhd8ed1ab_0
-  - typer=0.21.1=pyhf8876ea_0
-  - typer-slim=0.21.1=pyhcf101f3_0
-  - typer-slim-standard=0.21.1=h378290b_0
   - typing-extensions=4.15.0=h396c80c_0
-  - typing-inspection=0.4.2=pyhd8ed1ab_1
   - typing_extensions=4.15.0=pyhcf101f3_0
   - tzdata=2025c=hc9c84f9_1
-  - ubiquerg=0.8.0=pyhd8ed1ab_0
   - uriparser=0.9.8=hac33072_0
-  - uritemplate=4.2.0=pyhd8ed1ab_0
   - urllib3=2.6.3=pyhd8ed1ab_0
-  - veracitools=0.1.3=py_0
-  - wcwidth=0.5.3=pyhd8ed1ab_0
   - wheel=0.46.3=pyhd8ed1ab_0
   - wrapt=2.1.0=py310h7c4b9e2_0
   - xerces-c=3.3.0=h988505b_0
@@ -622,14 +503,13 @@ dependencies:
   - xorg-libxrender=0.9.12=hb9d3cd8_0
   - xorg-libxt=1.3.1=hb9d3cd8_0
   - yaml=0.2.5=h280c20c_3
-  - yarl=1.22.0=py310h3406613_0
   - yq=3.4.3=pyhe01879c_2
-  - yte=1.9.4=pyhd8ed1ab_0
   - zipp=3.23.0=pyhcf101f3_1
   - zlib=1.3.1=hb9d3cd8_2
   - zstd=1.5.7=hb78ec9c_6
   - pip:
       - bokeh==3.8.2
+      - click==8.3.1
       - cloudpickle==3.1.2
       - contourpy==1.3.2
       - cycler==0.12.1
@@ -639,17 +519,25 @@ dependencies:
       - fsspec==2026.1.0
       - hummuspy==0.1.9.post2
       - importlib-metadata==8.7.1
+      - jinja2==3.1.6
       - joblib==1.5.3
       - kiwisolver==1.4.9
       - locket==1.0.0
+      - markdown-it-py==4.0.0
+      - markupsafe==3.0.3
       - matplotlib==3.10.8
+      - mdurl==0.1.2
       - msgpack==1.1.2
       - multixrank==0.3
       - narwhals==2.15.0
       - networkx==3.4.2
       - partd==1.4.2
       - pillow==12.1.0
+      - psutil==7.2.2
       - pyarrow==23.0.0
+      - pygments==2.19.2
+      - pyparsing==3.3.2
+      - rich==14.3.2
       - scipy==1.15.3
       - sortedcontainers==2.4.0
       - tblib==3.2.2
