--- a/container/environment.yml
+++ b/container/environment.yml
@@ -282,7 +282,6 @@ dependencies:
   - pyparsing=3.3.2=pyhcf101f3_0
   - pysftp=0.2.9=py_1
   - pysocks=1.7.1=pyha55dd90_7
-  - pytest=9.0.2=pyhcf101f3_0
   - python=3.10.19=h3c07f61_3_cpython
   - python-dateutil=2.9.0.post0=pyhe01879c_2
   - python-fastjsonschema=2.21.2=pyhe01879c_0
@@ -629,6 +628,7 @@ dependencies:
   - zlib=1.3.1=hb9d3cd8_2
   - zstd=1.5.7=hb78ec9c_6
   - pip:
+      - autologging==1.3.2
       - bokeh==3.8.2
       - cloudpickle==3.1.2
       - contourpy==1.3.2
@@ -637,11 +637,11 @@ dependencies:
       - distributed==2026.1.2
       - fonttools==4.61.1
       - fsspec==2026.1.0
-      - hummuspy==0.1.9.post2
       - importlib-metadata==8.7.1
       - joblib==1.5.3
       - kiwisolver==1.4.9
       - locket==1.0.0
+      - logging==0.4.9.6
       - matplotlib==3.10.8
       - msgpack==1.1.2
       - multixrank==0.3
@@ -650,6 +650,8 @@ dependencies:
       - partd==1.4.2
       - pillow==12.1.0
       - pyarrow==23.0.0
+      - pytest==8.4.2
+      - pytest-dryrun==1.0.1
       - scipy==1.15.3
       - sortedcontainers==2.4.0
       - tblib==3.2.2
