--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,9 @@ export(peaks_in_regulatory_elements)
 export(run_cicero_wrapper)
 export(save_multilayer)
 export(store_network)
+export(load_first_object)
+export(create_init_directories_wrapper)
+export(store_update_hummus_object_wrapper)
 exportClasses(Hummus_Object)
 exportClasses(bipartite)
 exportClasses(motifs_db)
